Created HTML elements

--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
     <title>Top 10 Richest People</title>
 </head>
 <body>
-    
+    <h1>10 Richest People</h1>     
+    <p>Drag and drop the items into their corresponding spots</p>
+    <ul class="draggable-list" id="draggable-list">
+        <!-- LIST ITEMS WILL BE INSERTED THROUGH JAVASCRIPT -->
+    </ul>
+    <button class="check-btn" id="check">
+        Check Order
+        <i class="fas fa-paper-plane"></i>
+    </button>
+
     <!-- LOAD JS -->
     <script src="script.js"></script>
 </body>
